Writethrough + preliminary market stats

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -14,29 +14,21 @@
 
 <hr>
 
-**Stablecoins are hot,** believe it or not.
+**The future of stablecoins looks brighter everyday.** But the U.S. dollar's future? Not so much.
 
-<!--
+- Circle, the issuer of the popular USDC stablecoin, has launched its initial public offering (IPO) with a target valuation of around $6 billion.** The company plans to raise approximately $624 million by selling shares at a price range of $24 to $26 apiece, which could have significant investment implications for Coinbase, a major partner in the stablecoin's distribution. ([CNBC](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html)) | BlackRock is looking to be a big buyer of the Circle IPO: https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg
 
-Some early possibilities:
+- B2B stablecoin payments survey shows $36 billion annual pace: https://www.theblock.co/post/356231/b2b-stablecoin-payments-surge-to-36-billion-annual-pace-survey-finds
 
-- AIGADGETS: Followup to last week's post about OpenAI/Ive digital companion in the works. Consumer appetite for AI is kinda spotty, the blockbuster ChatGPT launch notwithstanding. This wasn't the case with the iPod or iPhone. Wrap in data, previous attempts at "third devices," smart speakers, watches, metaverse, etc.
+- Macro factors: Admin's tariff loss in court | Bloomberg's Levine on Fannie/Freddie re-privatization. See Fastmail archives.
 
-- STABLECOINS: Yeah, they sound boring. But they're becoming really important. Could be a good quick hit.
+- Rogoff book: TKTKKT
 
-- BADLOOK: Trump's self-dealing in memecoins and DeFi, as well as his potential wrecking of the broader U.S. economy, could taint the crypto industry as a whole for a long time.
+- https://www.axios.com/2025/05/28/vance-trump-crypto-bitcoin-stablecoin
 
-- TRISTATE: Wrench attack, Adams bitcoin bond, NJ tokenizing 240B in real Estate.
+- https://bitcoinmagazine.com/news/us-senator-cynthia-lummis-discusses-bitcoin-reserve-stablecoin-legislation-and-market-structure-bill-at-bitcoin-2025-conference
 
-- IMF: Their predictions of doom in El Salvador never came to pass.
-
--->
-
- Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
-
- Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
-
- Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+- Bank of Korea concerned about stablecoins' macro side effects: https://decrypt.co/322233/bank-of-korea-stablecoins-private-sector
 
  <hr>
 
@@ -49,39 +41,15 @@ Some early possibilities:
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- **IPO mania is spreading in crypto world.** Circle, the issuer of the popular USDC stablecoin, has launched its initial public offering (IPO) with a target valuation of around $6 billion.** The company plans to raise approximately $624 million by selling shares at a price range of $24 to $26 apiece, which could have significant investment implications for Coinbase, a major partner in the stablecoin's distribution. ([CNBC](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html)) | Online trading platform eToro has added 12 new cryptocurrencies to its U.S. platform, including Cardano, Dogecoin, and XRP, bringing the total number of listed assets to 15. This move comes after a settlement with the SEC and the launch of an IPO roadshow, and is seen as a renewed push by the Israel-based platform to expand its U.S. presence. ([Decrypt](https://decrypt.co/322372/etoro-adds-12-tokens-to-us-platform)) <!-- Draft summaries by Leo/Llama 3.1 8B--> | BlackRock is looking to be a big buyer of the Circle IPO: https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg
+- **AI Watch:** Nvidia earnings beat <!-- --> | China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china | Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
 
-- **Washington Watch:** At Bitcoin Las Vegas, Vance calls for passage of GENIUS Act in keynote speech: https://www.theblock.co/post/356074/jd-vance-calls-for-market-structure-bill-at-bitcoin-2025-says-trump-administration-will-fire-anti-crypto-regulators | Links to other highlights TK. Check back at https://news.google.com/search?q=Bitcoin%20Las%20Vegas%20conference&hl=en-US&gl=US&ceid=US%3Aen | US Labor Depratment withdrew Biden-era guidance warning retirement plans against the risks of buying crypto: https://www.cnbc.com/2025/05/28/crypto-in-401k-plans-trump-administration-eases-rules.html | Trump Media buying BTC. <!-- Link TK  | Pakistan hired a World Liberty Financial advisor to a key government role: https://decrypt.co/322221/pakistan-world-liberty-financial-advisor-government-role-crypto | https://www.politico.com/news/2025/05/28/crypto-trump-industry-memecoin-00372101 | https://www.axios.com/2025/05/28/vance-trump-crypto-bitcoin-stablecoin | https://bitcoinmagazine.com/news/us-senator-cynthia-lummis-discusses-bitcoin-reserve-stablecoin-legislation-and-market-structure-bill-at-bitcoin-2025-conference
+- **BTC treasury strategies continue to grow:** 21Capital has raised almost $700m. <!-- Link TK --> | Pakistan announces new national BTC reserve | El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase | Gamestop | World Liberty
 
-- Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
+- New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access
 
 - Bergen County, NJ tokenizing 240B in real estate on Avalanche
 
-- El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase
-
-- Wrench attacks against wealthy crypto investors are on the rise. https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144
-
-- China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china
-
-
-<!--
-
-Other candidates...
-
-
-- GameStop buying BTC
-
-- French police arrested 12 suspects in connection with crypto kidnappings: https://decrypt.co/322255/french-police-arrest-12-suspects-in-crypto-kidnapping-investigations
-
-- Could electric cars die again? https://www.nytimes.com/2025/05/26/business/electric-vehicles-history.html <!-- Need cleaned up version...
-
-- New data center city forming outside Reno. https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/
-
-- The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html
-
-- ICYMI: U.S. students' classroom performance has dropped markedly since the COVID19 pandemic according to multiple metrics, with one notable exception: high-school graduation rates. https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/
-
--->
+- Online trading platform eToro has added 12 new cryptocurrencies to its U.S. platform, including Cardano, Dogecoin, and XRP, bringing the total number of listed assets to 15. This move comes after a settlement with the SEC and the launch of an IPO roadshow, and is seen as a renewed push by the Israel-based platform to expand its U.S. presence. ([Decrypt](https://decrypt.co/322372/etoro-adds-12-tokens-to-us-platform)) <!-- Draft summaries by Leo/Llama 3.1 8B--> |
 
 ### Market Snapshot
 
@@ -91,19 +59,19 @@ Other candidates...
 
 | Indicator     | Close         |  Weekly %     |  YTD %       
 | ------------- | ------------- | ------------- | ------------- |
-| Bitcoin       | TK | ------------- | ------------- |
-| Nasdaq 100    | TK | ------------- | ------------- |
-| Gold          | TK | ------------- | ------------- |
-| USD Index     | TK | ------------- | ------------- |
-| 10-yr U.S.<br> Treasury Yield | TK | ------------- | ------------- |
+| Bitcoin       | $106,934.46 | -1.3% | 15.5% |
+| Nasdaq 100    | 21,370.35 | +2.2% | -0.5% |
+| Gold          | $3,355.30/oz | -0.1% | 27.7% |
+| USD Index     | 99.29 | +0.2% | -8.6% |
+| 10-yr U.S.<br> Treasury Yield | 4.4320% | -0.08 | -0.0640 |
 
 ### Looking Ahead
 
 - Ethereum co-founder Vitalik Buterin has suggested that Ethereum could be a viable alternative to traditional cash in the event of a cashless society failure, citing Sweden and Norway's recent decision to maintain cash reserves due to vulnerabilities in their centralized payment systems. However, experts disagree on the feasibility of Ethereum's resilience in such scenarios, with some highlighting the need for offline functionality and others pointing to the potential of stablecoins as a solution. ([Decrypt](https://decrypt.co/322398/vitalik-buterin-ethereum-sweden-norway-cashless)) <!-- Draft summary by Leo/Llama 3.1 8B-->
 
-- New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access
+- Gates increasing his philanthropy: https://fortune.com/2025/05/28/bill-gates-foundation-200-billion-philanthropy-international-aid/?utm_source=email&utm_medium=newsletter&utm_campaign=ceo-daily&utm_content=20250529&tpcc=NL_Marketing
 
-- Bank of Korea concerned about stablecoins' macro side effects: https://decrypt.co/322233/bank-of-korea-stablecoins-private-sector
+- Could electric cars die again? https://www.nytimes.com/2025/05/26/business/electric-vehicles-history.html <!-- Need cleaned up version...
 
 ### Odds & Ends
 
