writethrough by me + draft summaries by Leo/Llama 3.1 8B

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -1,3 +1,11 @@
+<!--
+
+Drafting some news summaries below for articles using following prompt to Brave's in-browser chatbot Leo/Llama 3.1 8B:
+
+I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Do not include a headline.
+
+-->
+
 # tktk
 ## tktk
 
@@ -22,7 +30,7 @@
 
 - Macro factors: Admin's tariff loss in court | Bloomberg's Levine on Fannie/Freddie re-privatization. See Fastmail archives.
 
-- Rogoff book: TKTKKT
+- Rogoff book: TKTKKT | Mason on the "moron premium" https://www.theatlantic.com/economy/archive/2025/04/trump-truss-moron-premium/682421/
 
 - https://www.axios.com/2025/05/28/vance-trump-crypto-bitcoin-stablecoin
 
@@ -41,15 +49,19 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- **AI Watch:** Nvidia earnings beat <!-- --> | China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china | Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
+- The Trump administration has been quietly expanding Palantir's work with the government, with the company's technology being adopted by at least four federal agencies, including the Department of Homeland Security and the Health and Human Services Department. This move has raised concerns about the potential for a master list of personal information on Americans to be compiled, giving the administration untold surveillance power and sparking debate about data privacy and security. ([New York Times](https://news.google.com/read/CBMihwFBVV95cUxQY3g5bE9MTENNcFFaVkNkTjFydTlDc1cxcVR2T09ocTBuUDlZbzJNUU04clVDUUFrRnBMSDlRSXhVMlJIT3dNb1JVMkhqUTZHVlk3NjlDVHpibzhNUzViRHFFM3JKSVl0Y2ZZUjd2M1I4bWhEX1BmX29CY3JnTVU1TldGa3dtUVU?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- **BTC treasury strategies continue to grow:** 21Capital has raised almost $700m. <!-- Link TK --> | Pakistan announces new national BTC reserve | El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase | Gamestop | World Liberty
+- **AI Watch:** Nvidia earnings beat <!-- --> | NYT/Amazon licensing deal: | China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china | Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
 
-- New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access
+- Despite the recent surge in crypto prices, search volume for key terms like "memecoin" and "bitcoin" remains relatively flat, suggesting a lack of retail engagement in the current market. This trend is corroborated by app store rankings, which show Coinbase and Robinhood hovering around 300th place in the US Apple App Store, rather than climbing to the top charts typically seen during retail surges. ([The Block](https://www.theblock.co/post/355861/crypto-search-trends-and-app-rankings-show-tepid-engagement-despite-recent-surge)) <!-- Draft summary by Leo/Llama 3.1 8B-->
 
-- Bergen County, NJ tokenizing 240B in real estate on Avalanche
+- **Nevertheless, on-chain experimentation is alive and well.** New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access | Bergen County, NJ tokenizing 240B in real estate on Avalanche
 
-- Online trading platform eToro has added 12 new cryptocurrencies to its U.S. platform, including Cardano, Dogecoin, and XRP, bringing the total number of listed assets to 15. This move comes after a settlement with the SEC and the launch of an IPO roadshow, and is seen as a renewed push by the Israel-based platform to expand its U.S. presence. ([Decrypt](https://decrypt.co/322372/etoro-adds-12-tokens-to-us-platform)) <!-- Draft summaries by Leo/Llama 3.1 8B--> |
+- **And institutional treasury strategies continue to grow.** 21Capital has raised almost $700m. <!-- Link TK --> | Pakistan announces new national BTC reserve | El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase | Gamestop | World Liberty
+
+<!--
+
+- Online trading platform eToro has added 12 new cryptocurrencies to its U.S. platform, including Cardano, Dogecoin, and XRP, bringing the total number of listed assets to 15. This move comes after a settlement with the SEC and the launch of an IPO roadshow, and is seen as a renewed push by the Israel-based platform to expand its U.S. presence. ([Decrypt](https://decrypt.co/322372/etoro-adds-12-tokens-to-us-platform)) <!-- Draft summaries by Leo/Llama 3.1 8B-->
 
 ### Market Snapshot
 
@@ -69,15 +81,15 @@
 
 - Ethereum co-founder Vitalik Buterin has suggested that Ethereum could be a viable alternative to traditional cash in the event of a cashless society failure, citing Sweden and Norway's recent decision to maintain cash reserves due to vulnerabilities in their centralized payment systems. However, experts disagree on the feasibility of Ethereum's resilience in such scenarios, with some highlighting the need for offline functionality and others pointing to the potential of stablecoins as a solution. ([Decrypt](https://decrypt.co/322398/vitalik-buterin-ethereum-sweden-norway-cashless)) <!-- Draft summary by Leo/Llama 3.1 8B-->
 
-- Gates increasing his philanthropy: https://fortune.com/2025/05/28/bill-gates-foundation-200-billion-philanthropy-international-aid/?utm_source=email&utm_medium=newsletter&utm_campaign=ceo-daily&utm_content=20250529&tpcc=NL_Marketing
+- Bill Gates and the Gates Foundation are shifting their focus as they prepare to sunset their operations in 20 years, with a $200 billion commitment to tackle major global health challenges. Despite the challenges posed by recent cuts to foreign aid, the foundation remains optimistic about its ability to drive progress and achieve its ambitious goals, including eradicating polio and malaria, and reducing deaths from tuberculosis and HIV/AIDS by 90%. https://fortune.com/2025/05/28/bill-gates-foundation-200-billion-philanthropy-international-aid/?tpcc=NL_Marketing  <!-- Draft summary by Leo/Llama 3.1 8B-->
 
-- Could electric cars die again? https://www.nytimes.com/2025/05/26/business/electric-vehicles-history.html <!-- Need cleaned up version...
+- Electric vehicles have a surprising history, with battery-operated cars being a mainstay over a century ago, only to be overtaken by gasoline-powered vehicles in the early 20th century. Today, the US may be poised to repeat history, with the Trump administration and Republicans pushing legislation that could hinder the growth of electric vehicles and favor oil and gasoline, despite growing demand for them worldwide. ([New York Times](https://news.google.com/read/CBMif0FVX3lxTE5Qa2tTMHdhQTJJeklzbTVBZ0xSbkhTenNsOFc5VnlpNEctNjQwVUxxR09ZNlRDUUZhUjZ3blU1d0ZwVkhUU2hoMlZlTHlod2hKYmlZb0VDSG1zQVhScE9aaUc4Ni1QQW1DRnFkOHpoamE4NWR6dVdnVGE3VTJjN0E?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B-->
 
 ### Odds & Ends
 
-- Jupiter's native memecoin has been surging: https://decrypt.co/322228/jupiter-price-surges-amid-expansion-bitcoin-tailwinds
+- **The New York Times reported at length Friday** on Elon Musk's [drug use and paternity issues](https://news.google.com/read/CBMifkFVX3lxTE1xdl8zVkxlTEpYQXJaZml2TUFtaGlwbnBaQlUyUmlEeDNVR3NKaGtacHNhYUhObEpRLWtPd2xCTVBVaXZXUE84aVFrMnp3Umh6WGJ6UklIQkprdThfX1NhbDhrWlItZkxuMTFDZHYyUkJFdWFaSEF4ZHAzbzFIdw?hl=en-US&gl=US&ceid=US%3Aen) while campaigning for Donald Trump. The newspaper says both escalated on the campaign trail more rapidly than previously known to the general public.
 
-- https://slate.com/culture/2025/05/birds-movies-charlies-angels-2000-pygmy-nuthatch.html
+- **Slate's Forrest Wickman spent months investigating** what he calls ["the wrongest bird in the history of cinema."](https://x.com/ForrestW/status/1921725033837129751) The critter, identified onscreen as a Pygmy Nuthatch in 2000's Charlie's Angels, was in fact [a Venezuelan Troupial](https://slate.com/culture/2025/05/birds-movies-charlies-angels-2000-pygmy-nuthatch.html).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
