Writethrough by me + some summary items drafted by Leo/Llama 3.1 8B

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -26,9 +26,13 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 - Circle, the issuer of the popular USDC stablecoin, has launched its initial public offering (IPO) with a target valuation of around $6 billion.** The company plans to raise approximately $624 million by selling shares at a price range of $24 to $26 apiece, which could have significant investment implications for Coinbase, a major partner in the stablecoin's distribution. ([CNBC](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html)) | BlackRock is looking to be a big buyer of the Circle IPO: https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg
 
+- Bloodbath in non-stablecoin cryptos last week: https://decrypt.co/323034/xrp-solana-alts-slip-crypto-market-contracts | https://decrypt.co/323142/crypto-liquidations-800-million-bitcoin-dogecoin-ethereum
+
 - B2B stablecoin payments survey shows $36 billion annual pace: https://www.theblock.co/post/356231/b2b-stablecoin-payments-surge-to-36-billion-annual-pace-survey-finds
 
-- Macro factors: Admin's tariff loss in court | Bloomberg's Levine on Fannie/Freddie re-privatization. See Fastmail archives.
+- Macro factors: Admin's tariff loss in court | Bloomberg's Levine on Fannie/Freddie re-privatization. See Fastmail archives. | New steel tariffs: https://www.wsj.com/economy/trade/trump-is-praising-his-u-s-steel-deal-no-one-is-sure-what-it-means-a6cb15b5?st=JrQFKy&reflink=desktopwebshare_permalink | Dimon predicts "crack" in the bond market: https://www.wsj.com/finance/jpmorgans-jamie-dimon-predicts-crack-in-the-bond-market-citing-u-s-fiscal-mess-9d90cb3f
+
+- **Axios reports that stablecoin startup Atticus** is raising a venture round that could make it the category's [first "unicorn" of 2025](https://www.theblock.co/post/356431/stablecoin-startup-atticus-nears-2-billion-valuation-following-raise-led-by-defense-tech-firm-ceo-report), with a valuation up to $2 billion.
 
 - Rogoff book: TKTKKT | Mason on the "moron premium" https://www.theatlantic.com/economy/archive/2025/04/trump-truss-moron-premium/682421/
 
@@ -51,13 +55,13 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 - The Trump administration has been quietly expanding Palantir's work with the government, with the company's technology being adopted by at least four federal agencies, including the Department of Homeland Security and the Health and Human Services Department. This move has raised concerns about the potential for a master list of personal information on Americans to be compiled, giving the administration untold surveillance power and sparking debate about data privacy and security. ([New York Times](https://news.google.com/read/CBMihwFBVV95cUxQY3g5bE9MTENNcFFaVkNkTjFydTlDc1cxcVR2T09ocTBuUDlZbzJNUU04clVDUUFrRnBMSDlRSXhVMlJIT3dNb1JVMkhqUTZHVlk3NjlDVHpibzhNUzViRHFFM3JKSVl0Y2ZZUjd2M1I4bWhEX1BmX29CY3JnTVU1TldGa3dtUVU?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- **AI Watch:** Nvidia earnings beat <!-- --> | NYT/Amazon licensing deal: | China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china | Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
+- **AI Watch:** Nvidia earnings beat <!-- --> | The New York Times [struck a deal](https://www.theverge.com/news/676291/new-york-times-ai-deal-amazon) with Amazon, its first licensing agreement to officially make the newspaper's content available to train AI models. (Unofficially, let's be honest, its content has been scraped by a bunch of AI models already.) | China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china | Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
 
 - Despite the recent surge in crypto prices, search volume for key terms like "memecoin" and "bitcoin" remains relatively flat, suggesting a lack of retail engagement in the current market. This trend is corroborated by app store rankings, which show Coinbase and Robinhood hovering around 300th place in the US Apple App Store, rather than climbing to the top charts typically seen during retail surges. ([The Block](https://www.theblock.co/post/355861/crypto-search-trends-and-app-rankings-show-tepid-engagement-despite-recent-surge)) <!-- Draft summary by Leo/Llama 3.1 8B-->
 
-- **Nevertheless, on-chain experimentation is alive and well.** New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access | Bergen County, NJ tokenizing 240B in real estate on Avalanche
+- **Nevertheless, on-chain experimentation is alive and well.** New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access | Bergen County, NJ tokenizing 240B in real estate on Avalanche | https://www.theblock.co/post/356434/uphold-teases-xrp-yield-and-relaunching-crypto-debit-card-in-us | https://decrypt.co/323189/bored-ape-maker-sells-moonbirds-gaming-startup
 
-- **And institutional treasury strategies continue to grow.** 21Capital has raised almost $700m. <!-- Link TK --> | Pakistan announces new national BTC reserve | El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase | Gamestop | World Liberty
+- **And institutional treasury strategies continue to grow.** 21Capital has raised almost $700m. <!-- Link TK --> | Pakistan announces new national BTC reserve | El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase | Gamestop | World Liberty | Nigel Farage wants the UK to have an official bitcoin reserve. https://decrypt.co/323180/nigel-farage-slash-crypto-capital-gains-bitcoin-reserve
 
 <!--
 
@@ -71,23 +75,23 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 | Indicator     | Close         |  Weekly %     |  YTD %       
 | ------------- | ------------- | ------------- | ------------- |
-| Bitcoin       | $106,934.46 | -1.3% | 15.5% |
-| Nasdaq 100    | 21,370.35 | +2.2% | -0.5% |
-| Gold          | $3,355.30/oz | -0.1% | 27.7% |
-| USD Index     | 99.29 | +0.2% | -8.6% |
-| 10-yr U.S.<br> Treasury Yield | 4.4320% | -0.08 | -0.0640 |
+| Bitcoin       | $104,529.65 | -3.5% | +15.5% |
+| Nasdaq 100    | 21,340.99 | +2.0% | -0.5% |
+| Gold          | $3,313.10/oz | -1.3% | +27.7% |
+| USD Index     | 99.44 | +0.3% | -8.6% |
+| 10-yr U.S.<br> Treasury Yield | 4.416% | -0.090 | -0.064 |
 
 ### Looking Ahead
 
-- Ethereum co-founder Vitalik Buterin has suggested that Ethereum could be a viable alternative to traditional cash in the event of a cashless society failure, citing Sweden and Norway's recent decision to maintain cash reserves due to vulnerabilities in their centralized payment systems. However, experts disagree on the feasibility of Ethereum's resilience in such scenarios, with some highlighting the need for offline functionality and others pointing to the potential of stablecoins as a solution. ([Decrypt](https://decrypt.co/322398/vitalik-buterin-ethereum-sweden-norway-cashless)) <!-- Draft summary by Leo/Llama 3.1 8B-->
+- **Vitalik Buterin sees potential opportunity for Ethereum** in recent decisions by the governments of Norway and Sweden to curtail efforts to go cashless. Their stumbles confirm inherent weaknesses in centralized payment systems that could be remedied by decentralized ones, according to Buterin and other crypto advocates. ([Decrypt](https://decrypt.co/322398/vitalik-buterin-ethereum-sweden-norway-cashless))
 
-- Bill Gates and the Gates Foundation are shifting their focus as they prepare to sunset their operations in 20 years, with a $200 billion commitment to tackle major global health challenges. Despite the challenges posed by recent cuts to foreign aid, the foundation remains optimistic about its ability to drive progress and achieve its ambitious goals, including eradicating polio and malaria, and reducing deaths from tuberculosis and HIV/AIDS by 90%. https://fortune.com/2025/05/28/bill-gates-foundation-200-billion-philanthropy-international-aid/?tpcc=NL_Marketing  <!-- Draft summary by Leo/Llama 3.1 8B-->
+- **The New York Times' Ivan Penn** is wondering whether the little-known early history of electric vehicles in the U.S. might be [poised to repeat itself](https://news.google.com/read/CBMif0FVX3lxTE5Qa2tTMHdhQTJJeklzbTVBZ0xSbkhTenNsOFc5VnlpNEctNjQwVUxxR09ZNlRDUUZhUjZ3blU1d0ZwVkhUU2hoMlZlTHlod2hKYmlZb0VDSG1zQVhScE9aaUc4Ni1QQW1DRnFkOHpoamE4NWR6dVdnVGE3VTJjN0E?hl=en-US&gl=US&ceid=US%3Aen). In the early 20th century, vehicles like the Baker Electric Coupe and the Riker Electric Roadster eventually lost out to Ford's famous Model T in part because the government implemented policies at the time favoring gasoline-powered cars. Now, in a possible modern-day echo of that era, Trumpist Republicans are pushing legislation that could hinder adoption of electric vehicles and favor fossil fuels.
 
-- Electric vehicles have a surprising history, with battery-operated cars being a mainstay over a century ago, only to be overtaken by gasoline-powered vehicles in the early 20th century. Today, the US may be poised to repeat history, with the Trump administration and Republicans pushing legislation that could hinder the growth of electric vehicles and favor oil and gasoline, despite growing demand for them worldwide. ([New York Times](https://news.google.com/read/CBMif0FVX3lxTE5Qa2tTMHdhQTJJeklzbTVBZ0xSbkhTenNsOFc5VnlpNEctNjQwVUxxR09ZNlRDUUZhUjZ3blU1d0ZwVkhUU2hoMlZlTHlod2hKYmlZb0VDSG1zQVhScE9aaUc4Ni1QQW1DRnFkOHpoamE4NWR6dVdnVGE3VTJjN0E?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B-->
+- **Fortune's Alexa Mikhail got an inside look** at how Gates Foundation employees have begun to implement founder Bill Gates' recently announced goal to [sunset the nonprofit's operations](https://fortune.com/2025/05/28/bill-gates-foundation-200-billion-philanthropy-international-aid/?tpcc=NL_Marketing) by 2045. That means spending down his $200 billion fortune at an accelerated pace to achieve the foundation's ambitious goals for global health, including eradicating polio and malaria, and reducing deaths from tuberculosis and AIDS by 90%.
 
 ### Odds & Ends
 
-- **The New York Times reported at length Friday** on Elon Musk's [drug use and paternity issues](https://news.google.com/read/CBMifkFVX3lxTE1xdl8zVkxlTEpYQXJaZml2TUFtaGlwbnBaQlUyUmlEeDNVR3NKaGtacHNhYUhObEpRLWtPd2xCTVBVaXZXUE84aVFrMnp3Umh6WGJ6UklIQkprdThfX1NhbDhrWlItZkxuMTFDZHYyUkJFdWFaSEF4ZHAzbzFIdw?hl=en-US&gl=US&ceid=US%3Aen) while campaigning for Donald Trump. The newspaper says both escalated on the campaign trail more rapidly than previously known to the general public.
+- **A busy 48 hours:** On Friday, the New York Times reported at length about Elon Musk's escalating [drug use and paternity issues](https://news.google.com/read/CBMifkFVX3lxTE1xdl8zVkxlTEpYQXJaZml2TUFtaGlwbnBaQlUyUmlEeDNVR3NKaGtacHNhYUhObEpRLWtPd2xCTVBVaXZXUE84aVFrMnp3Umh6WGJ6UklIQkprdThfX1NhbDhrWlItZkxuMTFDZHYyUkJFdWFaSEF4ZHAzbzFIdw?hl=en-US&gl=US&ceid=US%3Aen) while campaigning for Donald Trump. Then Musk showed up at an Oval Office press conference with a black eye, prompting the Times to speculate in Saturday's edition about who might have [punched him in the face](https://news.google.com/read/CBMie0FVX3lxTE02b0dGZGhFaHZqNHJJWXlEWm9kbXF0dUdDU1N3eEEyTXdvazBxMUZvYzREclczN3ZPQ0J1NG8zMGZlQlBrNjNfNkFqZ095dHlRMDdWYTQxMTE2ckg2QnZNVHk1cVZLbllIc0VlbktJUTBwUk1JV3htMlllZw?hl=en-US&gl=US&ceid=US%3Aen). Officially, Musk says he got the new shiner while horsing around with his 5-year-old son X. But I think it's pretty clear the Gray Lady is skeptical. 🤨
 
 - **Slate's Forrest Wickman spent months investigating** what he calls ["the wrongest bird in the history of cinema."](https://x.com/ForrestW/status/1921725033837129751) The critter, identified onscreen as a Pygmy Nuthatch in 2000's Charlie's Angels, was in fact [a Venezuelan Troupial](https://slate.com/culture/2025/05/birds-movies-charlies-angels-2000-pygmy-nuthatch.html).
 
